--- a/column-cards-base/style.css
+++ b/column-cards-base/style.css
@@ -31,6 +31,10 @@ body {
   background-color: #f1f1f1;
 }
 
+.card:hover{
+  box-shadow: 10px 10px 10px 10px rgba(100, 0, 100, 0.4); /* when user hover over a card it illuminates with purple color */
+}
+
 /* Responsive columns - one column layout (vertical) on small screens */
 @media screen and (max-width: 600px) {
   .column {
